Bard fullscreen - fix dark mode border

--- a/resources/css/components/fieldtypes/bard.css
+++ b/resources/css/components/fieldtypes/bard.css
@@ -244,11 +244,11 @@
         }
     }
 }
-/* Fullscreen mode
-   ========================================================================== */
+/* BARD / FULL SCREEN
+=================================================== */
 @layer ui-states {
     .bard-fullscreen {
-        @apply fixed inset-0 min-h-screen overflow-scroll rounded-none bg-gray-100 pt-14 dark:bg-gray-850;
+        @apply fixed inset-0 min-h-screen overflow-scroll border-none rounded-none bg-gray-100 pt-14 dark:bg-gray-850;
 
         & > .bard-editor {
             @apply relative mx-auto my-6 max-w-5xl rounded-lg bg-white px-8 shadow-ui-md dark:bg-gray-950 dark:shadow-lg;
